# haskell-linenoise

./: .gitignore  .stylish-haskell.yaml  LICENSE  Makefile  README.md  hie.yaml  justfile  linenoise.cabal  package.yaml  stack.yaml
.circleci/: config.yml
app/: Main.hs
src/: Linenoise.hs
src/Linenoise/: Completion.hs  FFI.hs  Repl.hs  Unlift.hs
src/System/Console/: FFI.hs  Repl.hs
