name:                linenoise
version:             0.2
synopsis:            Interactive prompts with linenoise.
homepage:            https://github.com/ejconlon/haskell-linenoise
license:             BSD3
category:            User Interfaces
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  cbits/linenoise.h
Bug-Reports:         https://github.com/ejconlon/haskell-linenoise/issues

Description:
  Interactive prompts with linenoise.

Source-Repository head
    Type: git
    Location: git@github.com:ejconlon/haskell-linenoise.git

library
  exposed-modules:
    System.Console.Repl
  other-modules:
    System.Console.FFI
  other-extensions:
    ForeignFunctionInterface

  ghc-options:        -Wall -fwarn-tabs
  cc-options:
  build-depends:
    base          >= 4.6,
    mtl           >= 2.2,
    exceptions    >= 0.7,
    filepath      >= 1.2,
    directory     >= 1.2,
    bytestring    >= 0.10,
    unliftio-core >= 0.1

  default-language:   Haskell2010
  hs-source-dirs:     src
  Include-dirs:       cbits

  C-sources:
    cbits/linenoise.c

executable linenoise-demo
  main-is: Main.hs
  build-depends:
    base       >= 4.6,
    mtl        >= 2.2,
    bytestring >= 0.10,
    linenoise
  default-language: Haskell2010
  hs-source-dirs: app
